--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'"
   },
   "dependencies": {
+    "@aws-sdk/util-utf8-browser": "^3.259.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/netinfo": "^9.3.7",
     "@react-native-picker/picker": "^2.4.8",
@@ -19,6 +21,7 @@
     "@types/react-native-vector-icons": "^6.4.13",
     "amazon-cognito-identity-js": "^6.1.2",
     "aws-amplify": "^5.0.14",
+    "aws-amplify-react-native": "^7.0.2",
     "country-list": "^2.3.0",
     "react": "18.2.0",
     "react-devtools": "^4.27.2",
